# OpenCLSkeleton

./: .gitignore  CMakeLists.txt  CONFIGURE.txt  LICENCE.txt  cl_macros.h  clean.sh  errorHandling.cpp  errorHandling.hpp  main.cl  main.cpp  main.hpp  openclGlobals.cpp  openclGlobals.hpp  openclHelpers.cpp  openclHelpers.hpp  projAsserts.hpp  replaceTabsBySpaces-helper.sh  replaceTabsBySpaces.sh
